<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_margin">

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rb_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/camera" />

            <RadioButton
                android:id="@+id/rb_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/cb_voice"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_marginStart="@dimen/activity_margin"
                    android:checked="true"
                    android:enabled="false"
                    android:scaleX="0.80"
                    android:scaleY="0.80"
                    android:text="@string/mute" />

                <TextView
                    android:id="@+id/tv_video"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="1dp"
                    android:enabled="false"
                    android:maxLength="10"
                    android:textSize="14sp"
                    tools:text="test1.mp4" />

                <Button
                    android:id="@+id/bt_default"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:enabled="false"
                    android:scaleX="0.65"
                    android:scaleY="0.65"
                    android:text="@string/default_video"
                    android:textSize="18sp" />
            </LinearLayout>

        </RadioGroup>

        <Button
            android:id="@+id/bt_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/wallpaper" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </FrameLayout>
</layout>